[package]
name = "dbc-price"
version = "0.1.0"
authors = ["bobo <dongkaige@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
lite-json = { version = "0.1", default-features = false }
serde = { version = "1.0.101", optional = true }

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'b2a50198d3fa71959c77d22edb5fdb8c1e74006c'
version = '2.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'b2a50198d3fa71959c77d22edb5fdb8c1e74006c'
version = '2.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'b2a50198d3fa71959c77d22edb5fdb8c1e74006c'
version = '2.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'b2a50198d3fa71959c77d22edb5fdb8c1e74006c'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'b2a50198d3fa71959c77d22edb5fdb8c1e74006c'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'b2a50198d3fa71959c77d22edb5fdb8c1e74006c'
version = '2.0.0'

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "lite-json/std",
    "serde",
]
