[package]
name = "dbc-testing"
version = "0.1.0"
authors = ["bobo <dongkaige@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
phase-reward = { path = "../../traits/phase-reward", default-features = false }
serde = { version = "1.0.101", optional = true }
bs58 = { package = "bs58", version="0.4.0", default-features = false }

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-timestamp]
default-features = false
package = 'pallet-timestamp'
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.babe]
default-features = false
package = 'pallet-babe'
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[features]
default = ["std"]
std = [
    "bs58/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "babe/std",
    "phase-reward/std",
    "serde",
]
