[package]
name = "dlc-machine"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
dbc-support = { path = "../support", default-features = false }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

rent-machine = { path = "../rent-machine", default-features = false }

[dev-dependencies]
sp-std = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true, features = ["std"] }
pallet-collective = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
dbc-price-ocw = { path = "../dbc-price-ocw", default-features = false }
generic-func = { path = "../generic-func", default-features = false }
committee = { path = "../committee" }
online-profile = { path = "../online-profile", default-features = false }

hex = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-core/std",
]
try-runtime = ["frame-support/try-runtime"]
