[package]
name = "dlc-price-ocw"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
lite-json = { version = "0.1", default-features = false }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, features = ["alloc"] }

frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

dbc-support = { path = "../support", default-features = false }
generic-func = { path = "../generic-func", default-features = false }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "generic-func/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
  "sp-runtime/std",
  "dbc-support/std",
]
try-runtime = ["frame-support/try-runtime"]
